tests/rule_import/input/import_all.rules
// RUN: %not %neal-fixture | %check
import * from "./base.rules"

// CHECK: warning:\d+ No random numbers
// CHECK: error:\d+ No force unwrap
